Add filter for search verified users
